# 22st-advanced-data-structures

./: .gitignore  CMakeLists.txt  README.md
app/: generate_bv_data.cpp
benchmarks/: bp_benchmark.cpp  bv_benchmark.cpp  utils_benchmark.cpp
data/: download_website_examples.sh
notebooks/: BV Benchmark.ipynb  bp_benchmark.csv  bp_required_bits.csv
src/: AVLTree.h  BP.h  BP2.h  BitRange.h  DynamicBitVector.h  NaiveDynamicBitVector.h  SmallDynamicBitVector.h  SmallStaticBitVector.h  SmallStaticBitVector2.h  StaticBitVector.h  TaggedPointer.h  commandline.h  io.h  main.cpp  utils.h
tests/: avl_tree_test.cpp  bp_test.cpp  bv_test.cpp  utils_test.cpp
